--- a/index.html
+++ b/index.html
@@ -759,8 +759,8 @@ Ab to yaadon ka saaya bhi udaas hai.".  <hr style="height: 5px; background-color
           <img src="1.jpg" alt="Project 3" class="project-image" />
         </div>
         <div class="project-item">
-    <img src="1.jpg" alt="Project 4" class="project-image" />
-    <a href="1.jpg" download class="download-button">
+    <img src="20240906_003250.jpg" alt="Project 4" class="project-image" />
+    <a href="20240906_003250.jpg" download class="download-button">
         <i class="fas fa-download"></i> Download
     </a>
 </div>
