--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@ Ethical hacking, penetration testing, vulnerability assessment Building: Website
             
             <div class="image-row">
     <div class="image-item">
-        <img src="e.jpg" alt="Image 5" onclick="openModal(this.src)">
+        <img src="https://www.dropbox.com/scl/fi/jdikth6mrulyauwaj5d4q/d666685474dd91a6c5a7b0a329da3346.jpg?rlkey=k3zxmbbqihd00br54qifjyg8h&st=hrcd9g03&dl=1" alt="Image 5" onclick="openModal(this.src)">
         <button class="button-29" role="button" onclick="downloadImage('e.jpg')">
             <i class="fas fa-download"></i> Download
         </button>
