--- a/index.html
+++ b/index.html
@@ -580,13 +580,13 @@ Ethical hacking, penetration testing, vulnerability assessment Building: Website
             <div class="gallery">
                 <div class="image-row">
                     <div class="image-item">
-                        <img src="e.jpg" alt="Image 1" onclick="openModal(this.src)">
+                        <img src="https://www.dropbox.com/scl/fi/grnt5n8egzilximgmqs0c/f455f93f1fb4b3a24b9478f41b2061e9.jpg?rlkey=hzaljia77wif9t7iplgivx4a9&st=6u6td1pp&dl=6" alt="Image 1" onclick="openModal(this.src)">
                         <button class="button-29" role="button" onclick="downloadImage('e.jpg')">
                             <i class="fas fa-download"></i> Download
                         </button>
                     </div>
                     <div class="image-item">
-                        <img src="q.jpg" alt="Image 2" onclick="openModal(this.src)">
+                        <img src="https://www.dropbox.com/scl/fi/zwqhzn7lb8vjkpu3xf4sq/657994861ea9f469fe5b5207276a780d.jpg?rlkey=9grx2kgyemszw8z5kftobyz0u&st=y8eqkg04&dl=7" alt="Image 2" onclick="openModal(this.src)">
                         <button class="button-29" role="button" onclick="downloadImage('q.jpg')">
                             <i class="fas fa-download"></i> Download
                         </button>
@@ -594,13 +594,13 @@ Ethical hacking, penetration testing, vulnerability assessment Building: Website
                 </div>
                 <div class="image-row">
                     <div class="image-item">
-                        <img src="q.jpg" alt="Image 3" onclick="openModal(this.src)">
+                        <img src="https://www.dropbox.com/scl/fi/itebhs41i22tcqlbnkb7z/b56af5484b5e952ab54e37176d7205ff.jpg?rlkey=6lboelk52qauioqhv36pg95c6&st=0204furr&dl=5" alt="Image 3" onclick="openModal(this.src)">
                         <button class="button-29" role="button" onclick="downloadImage('q.jpg')">
                             <i class="fas fa-download"></i> Download
                         </button>
                     </div>
                     <div class="image-item">
-                        <img src="q.jpg" alt="Image 4" onclick="openModal(this.src)">
+                        <img src="https://www.dropbox.com/scl/fi/cilk02po9lpx45lferb1a/ad4df0047c10200647ef2d52eead94a9.jpg?rlkey=4gb9any10c9ss1m6s64hmd0i8&st=mtk07nhb&dl=3" alt="Image 4" onclick="openModal(this.src)">
                         <button class="button-29" role="button" onclick="downloadImage('q.jpg')">
                             <i class="fas fa-download"></i> Download
                         </button>
@@ -617,7 +617,7 @@ Ethical hacking, penetration testing, vulnerability assessment Building: Website
         </button>
     </div>
     <div class="image-item">
-        <img src="q.jpg" alt="Image 6" onclick="openModal(this.src)">
+        <img src="https://www.dropbox.com/scl/fi/l3m3xz7yaiytey2ruwi2h/39e469049a15cdeda78c21aa537520e1.jpg?rlkey=aig0ors4cmlhw2mdelofb6o5y&st=pl7fzlo9&dl=2" alt="Image 6" onclick="openModal(this.src)">
         <button class="button-29" role="button" onclick="downloadImage('new_image_6.jpg')">
             <i class="fas fa-download"></i> Download
         </button>
