--- a/index.html
+++ b/index.html
@@ -611,13 +611,13 @@ Ethical hacking, penetration testing, vulnerability assessment Building: Website
             
             <div class="image-row">
     <div class="image-item">
-        <img src="https://www.dropbox.com/scl/fi/jdikth6mrulyauwaj5d4q/d666685474dd91a6c5a7b0a329da3346.jpg?rlkey=k3zxmbbqihd00br54qifjyg8h&st=hrcd9g03&dl=1" alt="Image 5" onclick="openModal(this.src)">
+        <img src="https://www.dropbox.com/scl/fi/cilk02po9lpx45lferb1a/ad4df0047c10200647ef2d52eead94a9.jpg?rlkey=4gb9any10c9ss1m6s64hmd0i8&st=49b5chwk&dl=1" alt="Image 5" onclick="openModal(this.src)">
         <button class="button-29" role="button" onclick="downloadImage('e.jpg')">
             <i class="fas fa-download"></i> Download
         </button>
     </div>
     <div class="image-item">
-        <img src="https://www.dropbox.com/scl/fi/l3m3xz7yaiytey2ruwi2h/39e469049a15cdeda78c21aa537520e1.jpg?rlkey=aig0ors4cmlhw2mdelofb6o5y&st=pl7fzlo9&dl=1" alt="Image 6" onclick="openModal(this.src)">
+        <img src="https://www.dropbox.com/scl/fi/itebhs41i22tcqlbnkb7z/b56af5484b5e952ab54e37176d7205ff.jpg?rlkey=6lboelk52qauioqhv36pg95c6&st=ghecsf0v&dl=0" alt="Image 6" onclick="openModal(this.src)">
         <button class="button-29" role="button" onclick="downloadImage('new_image_6.jpg')">
             <i class="fas fa-download"></i> Download
         </button>
