--- a/index.html
+++ b/index.html
@@ -651,13 +651,13 @@ Ethical hacking, penetration testing, vulnerability assessment Building: Website
             <div class="gallery">
                 <div class="image-row">
                     <div class="image-item">
-                        <img src="2.jpg" alt="Image 1" onclick="openModal(this.src)">
+                        <img src="https://www.dropbox.com/scl/fi/9rnegv8yoo600y5p94ilt/69eebb03b71a1e64389208a1a8b8b877.jpg?rlkey=iwer1yg0mwgoiv90fjjnwsuns&st=czxhqg4g&dl=1" alt="Image 1" onclick="openModal(this.src)">
                         <button class="button-29" role="button" onclick="downloadImage('e.jpg')">
                             <i class="fas fa-download"></i> Download
                         </button>
                     </div>
                     <div class="image-item">
-                        <img src="1.jpg" alt="Image 2" onclick="openModal(this.src)">
+                        <img src="https://www.dropbox.com/scl/fi/9rnegv8yoo600y5p94ilt/69eebb03b71a1e64389208a1a8b8b877.jpg?rlkey=iwer1yg0mwgoiv90fjjnwsuns&st=czxhqg4g&dl=1" alt="Image 2" onclick="openModal(this.src)">
                         <button class="button-29" role="button" onclick="downloadImage('q.jpg')">
                             <i class="fas fa-download"></i> Download
                         </button>
@@ -665,13 +665,13 @@ Ethical hacking, penetration testing, vulnerability assessment Building: Website
                 </div>
                 <div class="image-row">
                     <div class="image-item">
-                        <img src="q.jpg" alt="Image 3" onclick="openModal(this.src)">
+                        <img src="https://www.dropbox.com/scl/fi/9rnegv8yoo600y5p94ilt/69eebb03b71a1e64389208a1a8b8b877.jpg?rlkey=iwer1yg0mwgoiv90fjjnwsuns&st=czxhqg4g&dl=1" alt="Image 3" onclick="openModal(this.src)">
                         <button class="button-29" role="button" onclick="downloadImage('q.jpg')">
                             <i class="fas fa-download"></i> Download
                         </button>
                     </div>
                     <div class="image-item">
-                        <img src="q.jpg" alt="Image 4" onclick="openModal(this.src)">
+                        <img src="https://www.dropbox.com/scl/fi/9rnegv8yoo600y5p94ilt/69eebb03b71a1e64389208a1a8b8b877.jpg?rlkey=iwer1yg0mwgoiv90fjjnwsuns&st=czxhqg4g&dl=1" alt="Image 4" onclick="openModal(this.src)">
                         <button class="button-29" role="button" onclick="downloadImage('q.jpg')">
                             <i class="fas fa-download"></i> Download
                         </button>
@@ -682,13 +682,13 @@ Ethical hacking, penetration testing, vulnerability assessment Building: Website
             
             <div class="image-row">
     <div class="image-item">
-        <img src="e.jpg" alt="Image 5" onclick="openModal(this.src)">
+        <img src="https://www.dropbox.com/scl/fi/9rnegv8yoo600y5p94ilt/69eebb03b71a1e64389208a1a8b8b877.jpg?rlkey=iwer1yg0mwgoiv90fjjnwsuns&st=czxhqg4g&dl=1" alt="Image 5" onclick="openModal(this.src)">
         <button class="button-29" role="button" onclick="downloadImage('e.jpg')">
             <i class="fas fa-download"></i> Download
         </button>
     </div>
     <div class="image-item">
-        <img src="q.jpg" alt="Image 6" onclick="openModal(this.src)">
+        <img src="https://www.dropbox.com/scl/fi/9rnegv8yoo600y5p94ilt/69eebb03b71a1e64389208a1a8b8b877.jpg?rlkey=iwer1yg0mwgoiv90fjjnwsuns&st=czxhqg4g&dl=1" alt="Image 6" onclick="openModal(this.src)">
         <button class="button-29" role="button" onclick="downloadImage('new_image_6.jpg')">
             <i class="fas fa-download"></i> Download
         </button>
