--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@ Ethical hacking, penetration testing, vulnerability assessment Building: Website
 </div>
 
 <div class="button-container">
-    <button class="button-30" role="button" onclick="window.location.href='main.html';">View All</button>
+    <button class="button-30" role="button" onclick="window.location.href='Main.html';">View All</button>
 </div>
 
 <style>
