--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         </div>
     </
 <!-- Meta tag for redirecting after 5 seconds -->
-    <meta http-equiv="refresh" content="portfolio.html">
+    <meta http-equiv="refresh" content="about.html">
 </head>
 <body>
   
