--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+head>
+<body>
+  
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -263,7 +266,7 @@
         </div>
     </
 <!-- Meta tag for redirecting after 5 seconds -->
-    <meta http-equiv="refresh" content="about.html">
+    <meta http-equiv="refresh" content="5; url=about.html">
 </head>
 <body>
   
