--- a/about.html
+++ b/about.html
@@ -67,10 +67,10 @@
 
 <div class="header">
     <div class="profile-container">
-        <img src="https://www.dropbox.com/scl/fi/wf134valeukp9gac8k4no/20241015_124658.jpg?rlkey=349uf96kzwpffnwaoeug1xyoh&st=wn0a5kgt&dl=1" alt="Profile Picture" class="profile-pic">
+        <img src="20241015_124658.jpg" alt="Profile Picture" class="profile-pic">
     </div>
     <div class="banner-container">
-        <img src="https://www.dropbox.com/scl/fi/lb7icfv552vl9pab9gch1/20241015_130029.jpg?rlkey=80sula7o3xc2lwfwo07b32gjx&st=xdy6jp64&dl=1" alt="Banner" class="banner">
+        <img src="20241015_130029.jpg" alt="Banner" class="banner">
     </div>
 </div>
 
