--- a/about.html
+++ b/about.html
@@ -398,7 +398,7 @@ window.addEventListener('load', function() {
         <div class="row">
           <div class="col-lg-4">
             <img
-              src="5.png" alt="Profile Image" style="
+              src="profile.jpg" alt="Profile Image" style="
         width: 250px; 
         height: 250px; 
         border-radius: 50%; 
