--- a/about.html
+++ b/about.html
@@ -859,7 +859,7 @@ E-mail Templates </p>
             <br
 
 <div class="button-container">
-    <button class="button-30" role="button" onclick="window.location.href='https://www.google.com';">View All</button>
+    <button class="button-30" role="button" onclick="Main.html';">View All</button>
 </div>
 
 <style>
